tests/errors/pp-macrocall-3.h
#define EXPANDME1() void f(void);

// Too many arguments
EXPANDME1(a,b)
